--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         <activity
             android:name="de.stefan_brenner.powerpi.app.PowerPiActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait" >
+            android:launchMode="singleTop">
+        <!-- android:screenOrientation="portrait"-->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
