--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name=".GlobalState"
         android:theme="@style/AppTheme" >
         <activity
             android:name="de.stefan_brenner.powerpi.app.PowerPiActivity"
